# xdg-desktop-portal-test

./: CMakeLists.txt  README.md
data/: CMakeLists.txt  org.freedesktop.impl.portal.desktop.test.cmake.in  test.portal
src/: CMakeLists.txt  desktopportal.cpp  desktopportal.h  screencast.cpp  screencast.h  screencaststream.cpp  screencaststream.h  session.cpp  session.h  xdg-desktop-portal-test.cpp
src/test/: CMakeLists.txt  screencasttest.cpp
